[gd_scene load_steps=12 format=3 uid="uid://bs38bq5qjpys3"]

[ext_resource type="Texture2D" uid="uid://c81cltc8i8uv8" path="res://Assets/Enemies/Bat/noBKG_BatFlight_strip.png" id="1_18v84"]
[ext_resource type="Script" path="res://Enemies/Bat/bat.gd" id="1_ok5q8"]
[ext_resource type="Texture2D" uid="uid://ppfi12yx725s" path="res://Assets/Enemies/Bat/noBKG_BatDeath_strip.png" id="2_a68tl"]
[ext_resource type="Texture2D" uid="uid://c1y6nuains0ai" path="res://Assets/Enemies/Bat/noBKG_BatAttack_strip.png" id="3_7hstb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g64vy"]

[sub_resource type="Animation" id="Animation_vadvo"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7hstb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_h4djl"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a68tl")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hy177"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_18v84")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_58dur"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_18v84")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u31sq"]
_data = {
"Attack": SubResource("Animation_vadvo"),
"Death": SubResource("Animation_h4djl"),
"Idle": SubResource("Animation_hy177"),
"RESET": SubResource("Animation_58dur")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_k1dnf"]
radius = 11.1803

[node name="Bat" type="CharacterBody2D"]
scale = Vector2(-1, 1)
collision_layer = 65
collision_mask = 0
script = ExtResource("1_ok5q8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_g64vy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u31sq")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_18v84")
hframes = 8

[node name="PlayerDetector" type="RayCast2D" parent="." groups=["PlayerDetectionCasts"]]
rotation = -1.51669
scale = Vector2(2, 2)
collision_mask = 2

[node name="PlayerDetector2" type="RayCast2D" parent="." groups=["PlayerDetectionCasts"]]
rotation = -1.39626
scale = Vector2(2, 2)
collision_mask = 2

[node name="PlayerDetector3" type="RayCast2D" parent="." groups=["PlayerDetectionCasts"]]
rotation = -1.27584
scale = Vector2(2, 2)
collision_mask = 2

[node name="PlayerDetector4" type="RayCast2D" parent="." groups=["PlayerDetectionCasts"]]
rotation = -1.15715
scale = Vector2(2, 2)
collision_mask = 2

[node name="PlayerDetector5" type="RayCast2D" parent="." groups=["PlayerDetectionCasts"]]
rotation = -1.03847
scale = Vector2(2, 2)
collision_mask = 2

[node name="PlayerDetector6" type="RayCast2D" parent="." groups=["PlayerDetectionCasts"]]
rotation = -0.918043
scale = Vector2(2, 2)
collision_mask = 2

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(17, -6)
scale = Vector2(1, 0.5)
target_position = Vector2(0, 24)
collision_mask = 4

[node name="FloorDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 11)
collision_mask = 8

[node name="CeilingDetector" type="RayCast2D" parent="."]
position = Vector2(-5, -13)
target_position = Vector2(0, 8)
collision_mask = 16

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_k1dnf")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
